fix: 리팩토링
